# crazy-bill-splitter

./: LICENSE  README.md  docker-compose.yml  openapi.yml
.github/workflows/: test_python_app.yml
apps/crud-api/: Dockerfile
apps/crud-api/app/controllers/: application_controller.rb  settlements_controller.rb
apps/crud-api/app/models/: payment.rb  payment_participant.rb  settlement_session.rb  settlement_session_participant.rb
apps/crud-api/config/: credentials.yml.enc  database.yml  routes.rb
apps/crud-api/db/: schema.rb
apps/crud-api/db/migrate/: 20240817125624_create_settlement_sessions.rb  20240817131142_create_users.rb  20240817131452_create_payments.rb  20240817141001_create_payment_participants.rb  20240817143820_create_settlement_session_participants.rb
apps/crud-api/test/controllers/: settlement_sessions_controller_test.rb
apps/crud-api/test/fixtures/: payment_participants.yml  payments.yml  settlement_session_participants.yml  settlement_sessions.yml
apps/crud-api/test/models/: group_test.rb
apps/python/: Dockerfile  main.py  pyproject.toml
apps/python/src/routers/: __init__.py  (+2 more)
clients/browser/: package.json  panda.config.ts  pnpm-lock.yaml  tsconfig.json
clients/browser/app/: root.tsx
test/: Dockerfile  pyproject.toml
test/src/: env.py  test_main.py
test/src/cases/: test_calculate_settlements.py  test_calculate_settlements_send_once.py
test/src/helpers/: __init__.py  person.py  text.py
test/src/schemas/: payment.py  person.py  test_payment.py  test_person.py
test/src/services/: __init__.py  calculate_settlements.py
(+25 files in other folders)
